<resources>
    <string name="app_name">DiyetistanApp</string>
    <string name="email">E-mail</string>
    <string name="password">Şifre</string>
    <string name="first_name">Adınız</string>
    <string name="last_name">Soyadınız</string>
    <string name="title_profile">Ana Sayfa</string>
    <string name="title_bmr">BMR</string>
    <string name="title_diyet">Diyet</string>
    <string name="title_tarif">Tarif</string>
    <string name="title_blog">Blog</string>
    <string name="btc_login">GİRİŞ</string>
    <string name="text_createacc">Henüz bir hesabın yok mu ?</string>
    <string name="text_forgotpass">Şifreni mi unuttun?</string>
    <string name="text_newacc">Şimdi Kaydol!</string>
    <string name="btc_create_acc">Hesap Oluştur</string>
</resources>
