<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_pool_black_24dp"
        android:title="@string/title_bmr" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/title_diyet" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_room_service_black_24dp"
        android:title="@string/title_tarif" />
    <item
        android:id="@+id/blog"
        android:icon="@drawable/ic_insert_invitation_black_24dp"
        android:title="@string/title_blog" />

</menu>
