<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.diyetistan.diyetistanapp.ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logomuz" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_person_pin_black_24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/btn_login"
        style="@style/buttoncolorstyle"
        android:layout_width="280dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/btc_login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/text_forgotpass"
        android:textColor="#ffffff"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="47dp"
        android:text="@string/text_createacc"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/btn_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:text="@string/text_newacc"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

</RelativeLayout>